--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "counter-starter",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sc-learn.github.io/react-counter-app",
   "dependencies": {
     "classnames": "2.2.6",
     "prop-types": "15.7.2",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -32,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
